Fix blurring issue.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1458,7 +1458,7 @@ body.dark-theme .post-content hr {
     max-height: 80%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+
     transition: all ease 0.3s;
 }
 
